// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@snowpack/plugin-optimize minimal - no minification: console.log 1`] = ``;

exports[`@snowpack/plugin-optimize minimal - no minification: fs.writeFileSync 1`] = `
FILE: stubs/minimal/_snowpack/optimize-manifest.json
{
  "imports": {
    "/index.html": {
      "entry": [
        "/do-not-preload-2.js",
        "/index.js"
      ],
      "css": [
        "/style.css"
      ],
      "js": [
        "/do-not-preload-2.js",
        "/esm_example.js",
        "/index.js",
        "/target-es2018.js"
      ]
    }
  },
  "generated": {}
}
`;

exports[`@snowpack/plugin-optimize minimal - no options: console.log 1`] = ``;

exports[`@snowpack/plugin-optimize minimal - no options: fs.writeFileSync 1`] = `
FILE: stubs/minimal/_snowpack/optimize-manifest.json
{
  "imports": {
    "/index.html": {
      "entry": [
        "/do-not-preload-2.js",
        "/index.js"
      ],
      "css": [
        "/style.css"
      ],
      "js": [
        "/do-not-preload-2.js",
        "/esm_example.js",
        "/index.js",
        "/target-es2018.js"
      ]
    }
  },
  "generated": {}
}

--------------------------------------------------------------------------------

FILE: stubs/minimal/do-not-preload-1.js
console.error("Error: this file in a comment shouldn\\u2019t be preloaded");


--------------------------------------------------------------------------------

FILE: stubs/minimal/do-not-preload-1.js
console.error("Error: this file in a comment shouldn\\u2019t be preloaded");


--------------------------------------------------------------------------------

FILE: stubs/minimal/do-not-preload-2.js
console.error("Error: this entry file shouldn\\u2019t be preloaded, either (it\\u2019s already in the entry)");


--------------------------------------------------------------------------------

FILE: stubs/minimal/do-not-preload-2.js
console.error("Error: this entry file shouldn\\u2019t be preloaded, either (it\\u2019s already in the entry)");


--------------------------------------------------------------------------------

FILE: stubs/minimal/do-not-preload-3.js
console.error("Error: this lazy-loaded file should not be preloaded (then it\\u2019s not lazy-loaded)");


--------------------------------------------------------------------------------

FILE: stubs/minimal/do-not-preload-3.js
console.error("Error: this lazy-loaded file should not be preloaded (then it\\u2019s not lazy-loaded)");


--------------------------------------------------------------------------------

FILE: stubs/minimal/esm_example.js
export default function e(){return console.log("example"),1}


--------------------------------------------------------------------------------

FILE: stubs/minimal/esm_example.js
export default function e(){return console.log("example"),1}


--------------------------------------------------------------------------------

FILE: stubs/minimal/index.html
<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"/><title>Minimal test</title><link rel="stylesheet" href="style.css"/></head><body><script type="module" src="index.js"></script><script type="module" src="./do-not-preload-2.js"></script></body></html>

--------------------------------------------------------------------------------

FILE: stubs/minimal/index.js
import"./esm_example.js";import t from"./target-es2018.js";import("./do-not-preload-3.js"),(()=>{function o(e){console.log(e)}o("test",t())})();


--------------------------------------------------------------------------------

FILE: stubs/minimal/index.js
import"./esm_example.js";import t from"./target-es2018.js";import("./do-not-preload-3.js"),(()=>{function o(e){console.log(e)}o("test",t())})();


--------------------------------------------------------------------------------

FILE: stubs/minimal/style.css
body{border:1px solid #fff;margin:1px}

--------------------------------------------------------------------------------

FILE: stubs/minimal/target-es2018.js
export default function r(){const t={bar:"bar"},o=null;return console.log(t?.bar,o??100),!0}


--------------------------------------------------------------------------------

FILE: stubs/minimal/target-es2018.js
export default function r(){const t={bar:"bar"},o=null;return console.log(t?.bar,o??100),!0}

`;

exports[`@snowpack/plugin-optimize minimal - target: console.log 1`] = ``;

exports[`@snowpack/plugin-optimize minimal - target: fs.writeFileSync 1`] = `
FILE: stubs/minimal/_snowpack/optimize-manifest.json
{
  "imports": {
    "/index.html": {
      "entry": [
        "/do-not-preload-2.js",
        "/index.js"
      ],
      "css": [
        "/style.css"
      ],
      "js": [
        "/do-not-preload-2.js",
        "/esm_example.js",
        "/index.js",
        "/target-es2018.js"
      ]
    }
  },
  "generated": {}
}

--------------------------------------------------------------------------------

FILE: stubs/minimal/do-not-preload-1.js
console.error("Error: this file in a comment shouldn\\u2019t be preloaded");


--------------------------------------------------------------------------------

FILE: stubs/minimal/do-not-preload-1.js
console.error("Error: this file in a comment shouldn\\u2019t be preloaded");


--------------------------------------------------------------------------------

FILE: stubs/minimal/do-not-preload-2.js
console.error("Error: this entry file shouldn\\u2019t be preloaded, either (it\\u2019s already in the entry)");


--------------------------------------------------------------------------------

FILE: stubs/minimal/do-not-preload-2.js
console.error("Error: this entry file shouldn\\u2019t be preloaded, either (it\\u2019s already in the entry)");


--------------------------------------------------------------------------------

FILE: stubs/minimal/do-not-preload-3.js
console.error("Error: this lazy-loaded file should not be preloaded (then it\\u2019s not lazy-loaded)");


--------------------------------------------------------------------------------

FILE: stubs/minimal/do-not-preload-3.js
console.error("Error: this lazy-loaded file should not be preloaded (then it\\u2019s not lazy-loaded)");


--------------------------------------------------------------------------------

FILE: stubs/minimal/esm_example.js
export default function e(){return console.log("example"),1}


--------------------------------------------------------------------------------

FILE: stubs/minimal/esm_example.js
export default function e(){return console.log("example"),1}


--------------------------------------------------------------------------------

FILE: stubs/minimal/index.html
<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"/><title>Minimal test</title><link rel="stylesheet" href="style.css"/></head><body><script type="module" src="index.js"></script><script type="module" src="./do-not-preload-2.js"></script></body></html>

--------------------------------------------------------------------------------

FILE: stubs/minimal/index.js
import"./esm_example.js";import t from"./target-es2018.js";import("./do-not-preload-3.js"),(()=>{function o(e){console.log(e)}o("test",t())})();


--------------------------------------------------------------------------------

FILE: stubs/minimal/index.js
import"./esm_example.js";import t from"./target-es2018.js";import("./do-not-preload-3.js"),(()=>{function o(e){console.log(e)}o("test",t())})();


--------------------------------------------------------------------------------

FILE: stubs/minimal/style.css
body{border:1px solid #fff;margin:1px}

--------------------------------------------------------------------------------

FILE: stubs/minimal/target-es2018.js
export default function r(){const t={bar:"bar"},o=null;return console.log(t==null?void 0:t.bar,o!=null?o:100),!0}


--------------------------------------------------------------------------------

FILE: stubs/minimal/target-es2018.js
export default function r(){const t={bar:"bar"},o=null;return console.log(t==null?void 0:t.bar,o!=null?o:100),!0}

`;

exports[`@snowpack/plugin-optimize no HTML minification, with preloadModules: console.log 1`] = ``;

exports[`@snowpack/plugin-optimize no HTML minification, with preloadModules: fs.writeFileSync 1`] = `
FILE: stubs/minimal/_snowpack/optimize-manifest.json
{
  "imports": {
    "/index.html": {
      "entry": [
        "/do-not-preload-2.js",
        "/index.js"
      ],
      "css": [
        "/style.css"
      ],
      "js": [
        "/do-not-preload-2.js",
        "/esm_example.js",
        "/index.js",
        "/target-es2018.js"
      ]
    }
  },
  "generated": {}
}

--------------------------------------------------------------------------------

FILE: stubs/minimal/do-not-preload-1.js
console.error("Error: this file in a comment shouldn\\u2019t be preloaded");


--------------------------------------------------------------------------------

FILE: stubs/minimal/do-not-preload-1.js
console.error("Error: this file in a comment shouldn\\u2019t be preloaded");


--------------------------------------------------------------------------------

FILE: stubs/minimal/do-not-preload-2.js
console.error("Error: this entry file shouldn\\u2019t be preloaded, either (it\\u2019s already in the entry)");


--------------------------------------------------------------------------------

FILE: stubs/minimal/do-not-preload-2.js
console.error("Error: this entry file shouldn\\u2019t be preloaded, either (it\\u2019s already in the entry)");


--------------------------------------------------------------------------------

FILE: stubs/minimal/do-not-preload-3.js
console.error("Error: this lazy-loaded file should not be preloaded (then it\\u2019s not lazy-loaded)");


--------------------------------------------------------------------------------

FILE: stubs/minimal/do-not-preload-3.js
console.error("Error: this lazy-loaded file should not be preloaded (then it\\u2019s not lazy-loaded)");


--------------------------------------------------------------------------------

FILE: stubs/minimal/esm_example.js
export default function e(){return console.log("example"),1}


--------------------------------------------------------------------------------

FILE: stubs/minimal/esm_example.js
export default function e(){return console.log("example"),1}


--------------------------------------------------------------------------------

FILE: stubs/minimal/index.html
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta charset="UTF-8" />
    <title>Minimal test</title>
    <link rel="stylesheet" href="style.css" />
    <!-- [@snowpack/plugin-optimize] Add modulepreload to improve unbundled load performance (More info: https://developers.google.com/web/updates/2017/12/modulepreload) -->
    <link rel="modulepreload" href="/esm_example.js" />
    <link rel="modulepreload" href="/target-es2018.js" />

  </head>
  <body>
    <script type="module" src="index.js"></script>
    <!-- <script type="module" src="./do-not-preload-1.js"></script> -->
    <script type="module" src="./do-not-preload-2.js"></script>
    <!-- [@snowpack/plugin-optimize] modulepreload fallback for browsers that do not support it yet -->
    <script type="module" src="/esm_example.js"></script><script type="module" src="/target-es2018.js"></script>

  </body>
</html>


--------------------------------------------------------------------------------

FILE: stubs/minimal/index.js
import"./esm_example.js";import t from"./target-es2018.js";import("./do-not-preload-3.js"),(()=>{function o(e){console.log(e)}o("test",t())})();


--------------------------------------------------------------------------------

FILE: stubs/minimal/index.js
import"./esm_example.js";import t from"./target-es2018.js";import("./do-not-preload-3.js"),(()=>{function o(e){console.log(e)}o("test",t())})();


--------------------------------------------------------------------------------

FILE: stubs/minimal/style.css
body{border:1px solid #fff;margin:1px}

--------------------------------------------------------------------------------

FILE: stubs/minimal/target-es2018.js
export default function r(){const t={bar:"bar"},o=null;return console.log(t?.bar,o??100),!0}


--------------------------------------------------------------------------------

FILE: stubs/minimal/target-es2018.js
export default function r(){const t={bar:"bar"},o=null;return console.log(t?.bar,o??100),!0}

`;
